토큰 정보를 이용한 피드 CUD